# DigitalRace_2018-2019_UniversityRound

./: README.md
catkin_ws/devel/include/mastering_ros_demo_pkg/: demo_msg.h  demo_srv.h  demo_srvRequest.h  demo_srvResponse.h
catkin_ws/devel/lib/file_server/: file_server
catkin_ws/devel/lib/lane_detect/: lane_detect
catkin_ws/devel/lib/mastering_ros_demo_pkg/: demo_msg_publisher  demo_msg_subscriber  demo_topic_publisher  demo_topic_subscriber  image_transport_subscriber
catkin_ws/devel/lib/pkgconfig/: file_server.pc  lane_detect.pc  mastering_ros_demo_pkg.pc  video_stream.pc
catkin_ws/devel/lib/video_stream/: video_stream
catkin_ws/src/lane_detect/: CMakeLists.txt
catkin_ws/src/lane_detect/include/: carcontrol.h  header.h  imageprocessing.h  lanedetect.h  signdetect.h
catkin_ws/src/lane_detect/src/: carcontrol.cpp  imageprocessing.cpp  lanedetect.cpp  main.cpp  signdetect.cpp
catkin_ws/src/linux/: logfile_Team1.txt
contest_ws/devel/: .catkin  .rosinstall  setup.sh
contest_ws/devel/lib/file_server/: file_server
contest_ws/devel/lib/pkgconfig/: file_server.pc  team300.pc
contest_ws/devel/lib/team300/: team300
contest_ws/src/linux/: logfile_Team1.txt  logfile_team300.txt
contest_ws/src/team300/: CMakeLists.txt
contest_ws/src/team300/include/: carcontrol.h  header.h  imageprocessing.h  lanedetect.h  signdetect.h
contest_ws/src/team300/launch/: team300.launch
contest_ws/src/team300/src/: carcontrol.cpp  imageprocessing.cpp  lanedetect.cpp  main.cpp  signdetect.cpp
data/: README.md
models/: README.md
src/: README.md
(+21 files in other folders)
